# tauri-pomodoro-timer

./: .gitignore  package-lock.json  package.json  tailwind.config.js  test-delete.html  vite.config.ts
.github/workflows/: build.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Controls.tsx  DateRangePicker.tsx  DebugPanel.tsx  HistoryDetailModal.tsx  HistoryEntry.tsx  HistoryFilters.tsx  HistoryPanel.tsx  NoteLine.tsx  NotesPanel.tsx  PageTabBar.tsx  RoundTracker.tsx  SettingsModal.tsx  SettingsPanel.tsx  ThemeEditor.tsx  TimerPanel.tsx
src/pages/: SettingsPage.tsx
src/stores/: premiumStore.ts  settingsStore.ts  themeStore.ts  timerStore.ts
src/styles/: index.css
src/themes/: index.ts  presets.ts  themeManager.ts  types.ts
src/types/: index.ts
src/utils/: historyHelpers.ts  license.ts  notifications.ts  settingsWindow.ts  sound.ts  storage.ts  useTimer.ts
