[package]
name = "pomodoro-app"
version = "0.1.0"
description = "A Pomodoro timer desktop app"
authors = ["you"]
license = ""
repository = ""
default-run = "pomodoro-app"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
tauri-plugin-store = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
